# spatial-agentic-security

./: .gitignore  FINDINGS.md  METHODOLOGY.md  README.md  RESEARCH_INTEGRITY.md  SECURITY.md  pyproject.toml
docs/: benchmark_methodology.md  calibration_results_docker_breadth_v1.md  evalkit.md  experiment_design.md  findings_commitment_entropy.md  findings_geometric_formation_lab_v1.md  findings_keystone_fair_baseline.md  findings_minimal_core_gate_v1.md  findings_real_sandbox_gate_v3.md  findings_realistic_coding_gate.md  findings_realistic_coding_gate_v2.md  findings_sealed_spatial_puzzle.md  findings_spatial_anti_leak_generator.md  findings_spatial_detector.md  findings_spatial_formation_gate.md  findings_spatial_hardness.md  findings_spatial_leakage_bounded.md  findings_spatial_partial_compromise_stress.md  findings_spatial_structure_hardness.md  future_work.md  keystone_v2_correlated_authorization.md  limitations.md  paper_outline.md  protocol_spec.md  research_integrity.md  results_v0_1.md  results_v0_2.md  results_v0_3.md  results_v0_4.md  results_v0_5.md  results_v0_6.md  security_model.md  spatial_partial_compromise_experiment_deep_dive.md  threat_model.md
experiments/: run_all.py  run_fake_agent.py  run_honest.py  run_llm_attacker.py  run_overbudget.py  run_replay.py  run_stolen_piece.py  run_underbudget.py  run_unregistered_fake_agent.py  run_v0_2_focused_10000.py  run_v0_2_matrix.py  run_valid_signature_wrong_geometry.py  run_valid_signature_wrong_transform.py  run_wrong_message.py
experiments/configs/: fake_agent.yaml  honest_004.yaml  honest_1024.yaml  llm_attacker.yaml  overbudget.yaml  replay_attack.yaml  stolen_piece.yaml  underbudget.yaml  unregistered_fake_agent.yaml  v0_2_focused_10000.yaml  v0_2_matrix.yaml  valid_signature_wrong_geometry.yaml  valid_signature_wrong_transform.yaml  wrong_message.yaml
notebooks/: analyze_results.ipynb  visualize_message_shape.ipynb
src/spatial_swarm/: __init__.py
src/spatial_swarm/attacks/: __init__.py  duplicate_agent.py  fake_agent.py  forgery_harness.py  fuzzer.py  llm_attacker.py  malformed_agent.py  (+6 more)
tests/: _env_guards.py  test_action_canonicalization.py  test_anti_leak_generator.py  test_assembly_requires_all.py  test_budget_enforced.py  test_challenge_builder.py  test_challenge_envelope.py  test_challenge_verifier.py  test_content_bound_action.py  test_coordinator_challenge_hardening_v1.py  test_cross_swarm_replay.py  test_duplicate_submission_ejects.py  test_effect_mismatch.py  test_ephemeral_setup_commitment_verifier.py  test_evalkit.py  test_fair_baseline_keystone.py  test_formation_gate.py  test_fragments_disjoint.py  test_geometric_formation_lab.py  test_honest_and_fake_demo.py  test_keystone_v2.py  test_leakage_bounded.py  test_local_review.py  test_logs_redact_fragments.py  test_message_challenge_binding.py  test_metrics_digest.py  test_minimal_core_gate_v1.py  test_missing_piece_fails.py  test_no_direct_agent_communication.py  test_numeric_agent_ordering.py  test_partial_compromise_stress.py  test_policy_gate.py  test_puzzle_detector.py  test_puzzle_enclave.py  test_puzzle_generator.py  test_puzzle_integration.py  test_puzzle_leakage.py  test_puzzle_one_shot.py  test_puzzle_optional.py  test_puzzle_solvers.py  (+37 more)
(+137 files in other folders)
