[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "spatial-agentic-security"
version = "0.1.0"
description = "USAG: Unanimous Spatial Assembly Gate protocol simulator for fail-closed AI swarm communication."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Carlos Shields-Davis" }
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.7",
  "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "pytest>=8.0",
]
solvers = [
    "networkx>=3.2.1",
    "ortools>=9.15.6755",
    "python-sat>=1.9.dev5",
    "z3-solver>=4.16.0.0",
]

[project.scripts]
usag-run = "spatial_swarm.experiments.runner:main"
spatial-swarm = "spatial_swarm.experiments.runner:main"
spatial-puzzle = "spatial_swarm.spatial_puzzle.experiments.cli:main"
spatial-stress = "spatial_swarm.spatial_puzzle.experiments.partial_compromise_stress:main"
spatial-formation-gate = "spatial_swarm.spatial_puzzle.experiments.formation_gate:main"
spatial-realistic-gate = "spatial_swarm.spatial_puzzle.experiments.realistic_coding_gate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_swarm"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
