[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "spatial-agentic-security"
version = "0.1.0"
description = "USAG: Unanimous Spatial Assembly Gate protocol simulator for fail-closed AI swarm communication."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Carlos Shields-Davis" }
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.7",
  "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "pytest>=8.0",
]
solvers = [
    "networkx>=3.2.1",
    "ortools>=9.15.6755",
    "python-sat>=1.9.dev5",
    "z3-solver>=4.16.0.0",
]

[project.scripts]
usag-run = "spatial_swarm.experiments.runner:main"
spatial-swarm = "spatial_swarm.experiments.runner:main"
spatial-puzzle = "spatial_swarm.spatial_puzzle.experiments.cli:main"
spatial-stress = "spatial_swarm.spatial_puzzle.experiments.partial_compromise_stress:main"
spatial-formation-gate = "spatial_swarm.spatial_puzzle.experiments.formation_gate:main"
spatial-realistic-gate = "spatial_swarm.spatial_puzzle.experiments.realistic_coding_gate:main"
spatial-realistic-gate-v2 = "spatial_swarm.spatial_puzzle.experiments.realistic_coding_gate_v2:main"
spatial-real-sandbox-gate-v3 = "spatial_swarm.spatial_puzzle.experiments.real_sandbox_gate_v3:main"
spatial-minimal-core-gate-v1 = "spatial_swarm.spatial_puzzle.experiments.minimal_core_gate_v1:main"
spatial-coordinator-challenge-hardening-v1 = "spatial_swarm.spatial_puzzle.experiments.coordinator_challenge_hardening_v1:main"
spatial-geometric-formation-lab = "spatial_swarm.spatial_puzzle.experiments.geometric_formation_lab:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_swarm"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
